Updated the employer footer spacings

--- a/wp-content/themes/workingnyc/views/objects/footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/footer.twig
@@ -2,11 +2,11 @@
     <footer aria-label="{{ __('Footer', 'WNYC') }}" class="relative shadow-[0_-2px_16px_0px_rgba(0,0,0,0.06)] py-3 tablet:py-5 bg-white" role="contentinfo">
     <div class="site-max-width">
     <nav class="o-attribution__flex items-baseline">
-        <div class="flex flex-col tablet:flex-row desktop:flex-col w-fit tablet:w-full desktop:w-fit desktop:mr-[10px] justify-start tablet:justify-between desktop:justify-start items-start tablet:items-center desktop:items-start pb-3 desktop:pb-0 gap-2 tablet:gap-5">
+        <div class="flex flex-col tablet:flex-row desktop:flex-col w-fit tablet:w-full desktop:w-fit desktop:mr-[10px] justify-start tablet:justify-between desktop:justify-start items-start tablet:items-center desktop:items-start pb-3 desktop:pb-0 desktop:gap-3 gap-2 tablet:gap-5">
             <div>
             <span class="footer-font">{{ options.feedback_prompt }}</span>
             {% if employer %}
-                <p class="desktop:mb-0 mt-[4px] desktop:mt-[8px] tablet:mt-[8px]">
+                <p class="desktop:mb-0 mt-[14px] desktop:mt-[24px] tablet:mt-[14px]">
                     {{ options.employers_feedback_text }}
                 </p>
             {% endif %}
