--- a/wp-content/themes/workingnyc/views/employ-nyc-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/employ-nyc-landing-page.twig
@@ -37,7 +37,7 @@
             {% if section.header_title %}
             <div class="bg-scale-0 sticky top-0 z-10 pt-6">
               <div>
-                <h3 class="h5 mb-4 text-alt font-[600] text-[30px] desktop:text-[44px] tablet:text-[30px]">
+                <h3 class="h5 mb-4 text-alt font-[600] text-[30px] desktop:text-[33.18px] tablet:text-[30px]">
                   {{ section.header_title }}
                 </h3>
               </div>
@@ -58,13 +58,13 @@
     <div class="bg-scale-0">
       <div class="site-max-width pb-6">
         <div class="bg-scale-0 sticky top-0 z-10 pb-4">
-          <h1 class="text-[30px] desktop:text-[44px] tablet:text-[30px]" font-[600]">Upcoming</h1>
+          <h3 class="text-[30px] desktop:text-[33.18px] tablet:text-[30px]" font-[600]">Upcoming</h3>
         </div>
         <div class="grid desktop:grid-cols-3 tablet:grid-cols-2  gap-2 desktop:gap-3">
           {% for section in upcoming_events %}
             <div class="transform-none p-[32px] rounded-[5px] border-2 border-[#F0F6FA] desktop:relative tablet:relative">
               <p class="text-[#004CBE] text-[22px] font-[700] border-b-2 border-[#ECEFF2] pb-[16px] mb-[0px]">{{ section.job_event_title}}</p>
-              <div class="pt-[24px] desktop:min-h-[173px] tablet:min-h-[198px] min-h-[170px]">
+              <div class="pt-[24px] desktop:min-h-[173px] tablet:min-h-[198px] min-h-[170px] pb-[24px]">
                 <p class="flex mb-[10px]">
                   <svg aria-hidden="true" class="icon-ui c-card__feature-icon w-[24px] h-[24px]">
                     <use href="#lucide-calendar"></use>
@@ -114,7 +114,7 @@
             {% if section.interest_form_title %}
             <div class="bg-scale-0 sticky top-0 z-10">
               <div>
-                <h3 class="h5 mb-3 text-alt border-b border-scale-4 pb-3 text-[30px] desktop:text-[44px] tablet:text-[44px]">
+                <h3 class="h5 mb-3 text-alt border-b border-scale-4 pb-3 text-[30px] desktop:text-[33.18px] tablet:text-[33.18px]">
                   {{ section.interest_form_title }}
                 </h3>
               </div>
