--- a/wp-content/themes/workingnyc/views/objects/footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/footer.twig
@@ -4,7 +4,7 @@
     <nav class="o-attribution__flex items-baseline">
         <div class="flex flex-col tablet:flex-row desktop:flex-col w-fit tablet:w-full desktop:w-fit desktop:mr-[10px] justify-start tablet:justify-between desktop:justify-start items-start tablet:items-center desktop:items-start pb-3 desktop:pb-0 desktop:gap-3 gap-2 tablet:gap-5">
             <div class="desktop:w-[450px] tablet:w-[350px]">
-            <h5 class="footer-font tablet:text-[20px]">{{ options.feedback_prompt }}</h5>
+            <h5 class="footer-font tablet:text-[20px] mb-0">{{ options.feedback_prompt }}</h5>
             {% if employer %}
                 <p class="desktop:mb-0 mt-[14px] desktop:mt-[24px] tablet:mt-[14px] text-[18px] desktop:text-[20px] tablet:text-[18px]">
                     {{ options.employers_feedback_text }}
