Hidden second search box on mobile and tablet view

--- a/wp-content/themes/workingnyc/views/search/search-results.twig
+++ b/wp-content/themes/workingnyc/views/search/search-results.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% if term == ''%}
-<div>
+<div class="hidden tablet:hidden desktop:block">
   <div class="bg-[#E9F4FD]">
       <header class="site-max-width block py-5 tablet:py-6 desktop:py-7">
         <div class="max-w-[896px]">
