--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -25,6 +25,8 @@
           <div class="grid grid-cols-1 tablet:grid-cols-2 desktop:grid-cols-3 gap-3 auto-rows-[1fr]">
           {% elseif this.post.post_type == 'employer-programs' %}
           <div class="grid grid-cols-1 tablet:grid-cols-2 desktop:grid-cols-3 gap-3 auto-rows-[1fr]">
+          {% elseif this.post.post_type == 'announcements' %}
+            <div class="grid desktop:grid-cols-3 tablet:grid-cols-2  gap-2 desktop:gap-3">
           {% else %}
           <div class="grid grid-cols-1 tablet:grid-cols-2 gap-3 auto-rows-[1fr]">
           {% endif %}
@@ -35,6 +37,18 @@
                   post: post,
                   is_home:is_home
                 } %}
+              {% elseif post.post_type == 'announcements' %}
+              <section class="" id="announcements">
+                <div class="py-2 pt-5 tablet:py-8">
+                    <div>
+                    <div class="">
+                        <div class="transform-none border-2 border-[#F0F6FA] rounded-[5px]">
+                        {% include 'announcements/announcement.twig' with {this: post, site:site } only %}
+                        </div>
+                    </div>
+                    </div>
+                </div>
+              </section>
               {% else %}
               <div class="max-w-full">
                 {% include [ post.post_type ~ '/' ~ post.singular ~ '.twig'] with {
