Created new field in Announcement Field group

--- a/wp-content/themes/workingnyc/views/announcement.twig
+++ b/wp-content/themes/workingnyc/views/announcement.twig
@@ -39,6 +39,8 @@
 
           {{ post.announcement_details|wpautop }}
 
+          {{ post.announcement_body|wpautop }}
+
           <p class="small flex items-center">
             <svg class="icon-ui mie-1 icon-2" role="img">
               <title>{{ __('Last updated', 'WNYC-Date') }}</title>
