--- a/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
@@ -52,10 +52,13 @@
       </svg>
     </a>
     <h6 class="mt-0 tablet:hidden">{{ __('Jobseekers', 'WNYC - Navigation') }}</h6>
+    {% for menu_item in job_seeker_header_left_menu.get_items %}
+      <a class="o-navigation__item mr-2 font-[500] desktop:py-2 desktop-px-12 text-[#080707] no-underline hover:underline active:underline" width="84" height="70" href="{{ function('convert_link_locale', menu_item.link, site.site_url, site.url) }}" target="{{ menu_item.target }}">{{ menu_item.title }}</a>
+    {% endfor %}
   </div>
   <div>
-    {% for menu_item in job_seeker_header_menu.get_items %}
-      <a class="o-navigation__item mr-2 font-[500] desktop:py-2 desktop-px-12 text-[#080707] no-underline hover:underline active:underline" width="84" height="70" href="{{ function('convert_link_locale', menu_item.link, site.site_url, site.url) }}">{{ menu_item.title }}</a>
+    {% for menu_item in job_seeker_header_right_menu.get_items %}
+      <a class="o-navigation__item mr-2 font-[500] desktop:py-2 desktop-px-12 text-[#080707] no-underline hover:underline active:underline" width="84" height="70" href="{{ function('convert_link_locale', menu_item.link, site.site_url, site.url) }}" target="{{ menu_item.target }}">{{ menu_item.title }}</a>
     {% endfor %}
   </div>
   <button class="desktop:hidden mie-0" aria-controls="aria-c-menu" aria-expanded="false" data-js="menu" data-js-menu="open">
