--- a/wp-content/themes/workingnyc/views/objects/menu.twig
+++ b/wp-content/themes/workingnyc/views/objects/menu.twig
@@ -7,8 +7,11 @@
             <a class="o-menu__nav-item py-2 text-[#080707] no-underline hover:underline active:underline" target="{{ menu_item.target }}" href="{{ function('convert_link_locale', menu_item.link , site.site_url, site.url) }}" tabindex="-1">{{ menu_item.title }}</a>
           {% endfor %}
         {% else %}
-          {% for menu_item in job_seeker_header_menu.get_items %}
-            <a class="o-menu__nav-item py-2 text-[#080707] no-underline hover:underline active:underline" href="{{ function('convert_link_locale', menu_item.link , site.site_url, site.url) }}" tabindex="-1">{{ menu_item.title }}</a>
+        {% for menu_item in job_seeker_header_left_menu.get_items %}
+            <a class="o-menu__nav-item py-2 text-[#080707] no-underline hover:underline active:underline" href="{{ function('convert_link_locale', menu_item.link , site.site_url, site.url) }}" tabindex="-1" target="{{ menu_item.target }}">{{ menu_item.title }}</a>
+          {% endfor %}
+          {% for menu_item in job_seeker_header_right_menu.get_items %}
+            <a class="o-menu__nav-item py-2 text-[#080707] no-underline hover:underline active:underline" href="{{ function('convert_link_locale', menu_item.link , site.site_url, site.url) }}" tabindex="-1" target="{{ menu_item.target }}">{{ menu_item.title }}</a>
           {% endfor %}
         {% endif %}
       </nav>
