--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -65,17 +65,27 @@
       {% endif %}
 
       {% if this.archive.link %}
-      <div>
-        <div class="wrap tablet:pt-6">
-          <a class="btn btn-primary btn-next w-full" href="{{ this.archive.link }}"{% if this.archive.external %} target="_blank" rel="noopener"{% endif %}>
-            <span>{{ this.archive.label }}</span>
+        <div>
+          <div class="wrap tablet:pt-2">
+            {% if this.post.post_type == 'jobs-events' %}
+              <a href="{{ function('convert_link_locale', site.site_url ~ '/jobsevents' , site.site_url, site.url) }}"{% if this.archive.external %} target="_blank" rel="noopener"{% endif %}>
+                <span>{{ this.archive.label }}</span>
 
-            <svg aria-hidden="true" class="icon-ui rtl:flip">
-              <use href="#lucide-{% if this.archive.external %}external-link{% else %}arrow-right{% endif %}"></use>
-            </svg>
-          </a>
+                <svg aria-hidden="true" class="icon-ui rtl:flip">
+                  <use href="#lucide-{% if this.archive.external %}external-link{% else %}arrow-right{% endif %}"></use>
+                </svg>
+              </a>
+            {% else %}
+              <a class="btn btn-primary btn-next w-full" href="{{ this.archive.link }}"{% if this.archive.external %} target="_blank" rel="noopener"{% endif %}>
+                <span>{{ this.archive.label }}</span>
+
+                <svg aria-hidden="true" class="icon-ui rtl:flip">
+                  <use href="#lucide-{% if this.archive.external %}external-link{% else %}arrow-right{% endif %}"></use>
+                </svg>
+              </a>
+            {% endif %}
+          </div>
         </div>
-      </div>
       {% endif %}
     {% endif %}
 
