Registered new manus and added them on jobseeker and employer pages

--- a/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
@@ -48,7 +48,7 @@
     <a class="pr-2 hidden tablet:block" href="{{ function('convert_link_locale', site.site_url ~ '/jobseekers' , site.site_url, site.url) }}">
       <svg class="o-navigation__svg fill-text text-brand" width="206" height="22">
         <title>{{ __('Jobs NYC jobseeker homepage', 'WNYC - Navigation') }}</title>
-        <use href="#logo-jobs-nyc-jobseeker"></use>
+        <use href="#logo-jobs-nyc-black-blue"></use>
       </svg>
     </a>
     <h6 class="mt-0 tablet:hidden">{{ __('Jobseekers', 'WNYC - Navigation') }}</h6>
