--- a/wp-content/themes/workingnyc/views/objects/employer-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/employer-navigation.twig
@@ -35,13 +35,16 @@
     <a class="pr-2 hidden tablet:block" href="{{ function('convert_link_locale', site.site_url ~ '/employers' , site.site_url, site.url) }}">
       <svg class="o-navigation__svg fill-text text-brand" width="196" height="22">
         <title>{{ __('Jobs NYC employer homepage', 'WNYC - Navigation') }}</title>
-        <use href="#logo-jobs-nyc-employer"></use>
+        <use href="#logo-jobs-nyc-black-blue"></use>
       </svg>
     </a>
     <h6 class="mt-0 tablet:hidden">{{ __('Employers', 'WNYC - Navigation') }}</h6>
+    {% for menu_item in employer_header_left_menu.get_items %}
+      <a class="o-navigation__item mr-2 font-[500] desktop:py-2 desktop-px-12 text-[#080707] no-underline hover:underline active:underline" width="84" height="70" href="{{ function('convert_link_locale', menu_item.link, site.site_url, site.url) }}" target="{{ menu_item.target }}">{{ menu_item.title }}</a>
+    {% endfor %}
   </div>
   <div>
-    {% for menu_item in employer_header_menu.get_items %}
+    {% for menu_item in employer_header_right_menu.get_items %}
       <a class="o-navigation__item mr-2 font-[500] desktop:py-2 desktop-px-12 text-[#080707] no-underline hover:underline active:underline" width="84" height="70" target="{{menu_item.target}}" href="{{ function('convert_link_locale', menu_item.link, site.site_url, site.url) }}">{{ menu_item.title }}</a>
     {% endfor %}
   </div>
