--- a/wp-content/themes/workingnyc/views/home.twig
+++ b/wp-content/themes/workingnyc/views/home.twig
@@ -31,17 +31,21 @@
           </a>
           {% if options.jobseeker_hero_secondary_button %}
             <a class="btn btn-styled w-full tablet:w-fit text-[#30374F] border-[#30374F]" href="{{ options.jobseeker_hero_secondary_button.url }}" {% if options.jobseeker_hero_secondary_button.target == '_blank' %}target="{{ options.jobseeker_hero_secondary_button.target }}" {% endif %}>
-              <div>{{ options.jobseeker_hero_primary_button.title }}</div>
+              <div>{{ options.jobseeker_hero_secondary_button.title }}</div>
               <svg aria-hidden="true" class="w-[20px] h-[20px] ml-[4px] icon-ui rtl:flip">
                 <use href="#lucide-arrow-right"></use>
               </svg>
             </a>
-            </div>
+          {% endif %}
+          </div>
+          {% if options.jobseeker_hero_text_link %}
+          <div class="pt-2">
             <a class="h-5 flex flex-col justify-center w-fit" href="{{ options.jobseeker_hero_text_link.url }}" {% if options.jobseeker_hero_text_link.target == '_blank' %}target="{{ options.jobseeker_hero_text_link.target }}" {% endif %} rel="noopener">
               <div class="font-600 text-[#0C264D] text-[16px]">
                 {{ options.jobseeker_hero_text_link.title }}
               </div>
             </a>
+          </div>
           {% endif %}
         </div>
     {% if post.thumbnail %}
