--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -66,7 +66,7 @@
 
       {% if this.archive.link %}
         <div>
-          <div class="wrap tablet:pt-2">
+          <div class="pt-2">
             {% if this.post.post_type == 'jobs-events' %}
               <a href="{{ function('convert_link_locale', site.site_url ~ '/jobsevents' , site.site_url, site.url) }}"{% if this.archive.external %} target="_blank" rel="noopener"{% endif %}>
                 <span>{{ this.archive.label }}</span>
