make underline color match font color

--- a/wp-content/themes/workingnyc/views/home.twig
+++ b/wp-content/themes/workingnyc/views/home.twig
@@ -37,7 +37,7 @@
           </div>
           {% if options.jobseeker_hero_text_link %}
             <div class="pt-2">
-              <a class="h-5 flex flex-col justify-center w-fit" href="{{ options.jobseeker_hero_text_link.url }}" {% if options.jobseeker_hero_text_link.target == '_blank' %}target="{{ options.jobseeker_hero_text_link.target }}" {% endif %} rel="noopener">
+              <a class="h-5 flex flex-col justify-center w-fit decoration-[#0C264D]" href="{{ options.jobseeker_hero_text_link.url }}" {% if options.jobseeker_hero_text_link.target == '_blank' %}target="{{ options.jobseeker_hero_text_link.target }}" {% endif %} rel="noopener">
                 <div class="font-600 text-[#0C264D] text-[16px]">
                   {{ options.jobseeker_hero_text_link.title }}
                 </div>
