--- a/wp-content/themes/workingnyc/views/programs/program.twig
+++ b/wp-content/themes/workingnyc/views/programs/program.twig
@@ -24,7 +24,7 @@
       {%endif%}
   </header>
 
-{% if post.status and not is_home %}
+{% if not is_home %}
   <div class="c-card__body py-3 px-5 tablet:py-5 min-h-[206px] justify-between">
     <div class="mb-0">
       
