--- a/wp-content/themes/workingnyc/views/programs/program.twig
+++ b/wp-content/themes/workingnyc/views/programs/program.twig
@@ -24,6 +24,7 @@
       {%endif%}
   </header>
 
+{# Fix Empty cards issue. Removed recruitment status condition #}
 {% if not is_home %}
   <div class="c-card__body py-3 px-5 tablet:py-5 min-h-[206px] justify-between">
     <div class="mb-0">
