Added icon to post archive link in container

--- a/wp-content/themes/workingnyc/views/components/container.twig
+++ b/wp-content/themes/workingnyc/views/components/container.twig
@@ -43,6 +43,9 @@
                rel="noopener">
               <div class="font-600 text-[#0C264D] text-[16px]">
                 {{ this.fields.featured_posts_archive_label }}
+                <svg aria-hidden="true" class="icon-ui rtl:flip h-22 w-22">
+                  <use href="#lucide-arrow-right"></use>
+                </svg>
               </div>
             </a>
           </div>
